Use c++11 by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ option(BUILD_TEST "Enable building tests." 1)
 include_directories("${CMAKE_CURRENT_LIST_DIR}")
 
 if (BUILD_TEST)
+  set(CMAKE_CXX_STANDARD 11)
   add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tests")
   file(COPY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 endif()
